--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ email-validator = "^2.2.0"
 faker = "^26.0.0"
 pytest-asyncio = "^0.23.7"
 punq = "^0.7.0"
+pydantic-settings = "^2.3.4"
+motor = "^3.5.1"
 
 
 [build-system]
